--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ body{
 }
 
 .resume_wrapper .resume_left .resume_info{
-	color: #84838b;
+	color: #d0cfda;
 }
 
 
@@ -173,6 +173,13 @@ body{
 }
 .container {
 	text-align: end
+}
+a {
+	text-decoration: none;
+	background: #3f51b5;
+	color: #fff;
+	font-size: 15px;
+    font-weight: 600;
 }
 .resume_wrapper .resume_right{
 	width: 65%;
